# cardano-node

./: .gitattributes  .gitignore  .gitmodules  .hlint.template.yaml  .hlint.yaml  .readthedocs.yml  .stack-to-nix.cache  .stylish-haskell.yaml  CHANGELOG.md  CNAME  CODE-OF-CONDUCT.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING.rst  ChangeLog.md  Demeter-Setup.md  Dockerfile  Dockerfile.backbone  Dockerfile.backbonecf  Dockerfile.block-producer-mithril  Dockerfile.blockproducer  Dockerfile.node  Dockerfile.relay  Dockerfile.relay-mithril  Dockerfile.relay-p2p  Dockerfile.submitapi  KK_ChangeLog.md  LICENSE  Makefile  NOTICE  README.md  README.rst  RELEASE.md  SECURITY.md  STYLE.md  STYLEGUIDE.md  bench-7950  bench-9950  bors.toml  (+94 more)
MazeGenerator/: .gitignore  GL.hs  Main.hs  MazeGenerator.cabal  MazeGenerator.hs  README.md  RandomGeneration.hs  Types.hs
cardano-api/: ChangeLog.md  Changelog.md  NOTICE  README.md  cardano-api.cabal
cardano-api-gen/: ChangeLog.md  README.md  cardano-api-gen.cabal
cardano-api-test/: ChangeLog.md  README.md  cardano-api-test.cabal
cardano-api-test/test/: cardano-api-test.hs
cardano-api/app/: cardano-api-demo.hs
cardano-api/test/: cardano-api-test.cabal  cardano-api-test.hs
cardano-cli/: CHANGELOG.md  ChangeLog.md  Changelog.md  Main.hs  README.md  cardano-cli.cabal  cardano-new-faucet.hs  payment-signing-key-file  payment-verification-key-file  transaction-body
cardano-cli/app/: cardano-cli.hs
cardano-cli/test/: Main.hs  Readme.md  cardano-cli-golden.hs  cardano-cli-pioneers.hs  cardano-cli-test.hs
cardano-client-demo/: CHANGELOG.md  ChainSyncClientWithLedgerState.hs  LedgerState.hs  Main.hs  MainLedgerState.hs  NOTICE  NewApiStuff.hs  PlutusEvents.hs  ScanBlocks.hs  ScanBlocksPipelined.hs  Stake-Credential-History.md  StakeCredentialHistory.hs  cardano-client-demo.cabal
cardano-config/: ChangeLog.md  README.md  cardano-config.cabal
cardano-config/test/: cardano-config-test.hs
cardano-debug/: README.md  cardano-debug.cabal
cardano-debug/app/: Main.hs
cardano-git-rev/: Cardano-Git-Rev.html  NOTICE  README.md  cardano-git-rev.cabal  cardano-git-rev.haddock  cardano-git-rev.txt  doc-index.html  doc-index.json  index.html
cardano-git-rev/cbits/: rev.c
cardano-git-rev/src/: Cardano.Git.Rev.html
cardano-node/: CHANGELOG.md  ChangeLog.md  NOTICE  NodeLib.hs  Parser.hs  README.md  Setup.hs  cardano-node.cabal  erasestate.sh  ledger_events.cddl  localbin.sh  moo.txt
cardano-node-capi/: CHANGELOG.md  cardano-node-capi.cabal
cardano-node-capi/src/: Node.hs
cardano-node-chairman/: NOTICE  cardano-node-chairman.cabal  logs.txt  mkfiles.sh
cardano-node-chairman/app/: cardano-node-chairman.hs
cardano-node-chairman/test/: Main.hs  Spec.hs
cardano-node-chairman/testnet/: Main.hs
cardano-node/app/: GhcDebugWrap.hs  cardano-cli.hs  cardano-node.hs  chairman.hs  db-synthesizer.hs  trace-acceptor.hs  wallet-client.hs
cardano-node/chairman/: chairman.hs
cardano-node/docs/: GenesisData.md  tx-submit-using-tx-gen.md
cardano-node/hsscripts/: take-snapshot.hs
cardano-node/proto/: node.proto
cardano-node/test/: Spec.hs  cardano-node-test.hs
cardano-ping/: CHANGELOG.md  Cardano-Network-Ping.html  NOTICE  README.md  cardano-ping.cabal  cardano-ping.haddock  cardano-ping.txt  doc-index.html  doc-index.json  index.html
cardano-ping/app/: Main.hs
cardano-ping/src/: Cardano.Network.Ping.html
cardano-rpc/: cardano-rpc.cabal
cardano-submit-api/: CHANGELOG.md  NOTICE  README.md  cardano-submit-api.cabal  swagger.yaml  testing-tx-submit.md
cardano-submit-api/app/: Main.hs
cardano-submit-api/test/: test.hs
cardano-temp/: cardano-faucet.hs  cardano-temp.cabal
cardano-testnet/: CHANGELOG.md  NOTICE  README.md  cardano-testnet.cabal  out.txt
cardano-testnet/app/: cardano-testnet.hs
cardano-testnet/cardano-testnet-paths/: cardano-testnet-paths.cabal
cardano-testnet/changelog.d/: 20260219_005200_palas_scriv_testnet.md  scriv.ini  (+34 more)
cardano-tracer/: CHANGELOG.md  CODEOWNERS  LICENSE  NOTICE  README.md  cardano-tracer.cabal
cardano-tx-generator/: NOTICE  README.md  cardano-tx-generator.cabal
cddl/: Makefile  cddl.cabal
constitution-script/: constitution-script.cabal
datapoint-forward/: README.md  datapoint-forward.cabal
ekg-forward/: CHANGELOG.md  README.md  ekg-forward.cabal
ghc-debug-snapshot/: README.md  ghc-debug-snapshot.cabal
hedgehog-extras/: CHANGELOG.md  Hedgehog-Extras-Aeson.html  Hedgehog-Extras-Internal-Cli.html  Hedgehog-Extras-Internal-Orphans.html  Hedgehog-Extras-Internal-Plan.html  Hedgehog-Extras-Internal-Test-Integration.html  Hedgehog-Extras-Stock-Aeson.html  Hedgehog-Extras-Stock-CallStack.html  Hedgehog-Extras-Stock-IO-File.html  Hedgehog-Extras-Stock-IO-Network-NamedPipe.html  Hedgehog-Extras-Stock-IO-Network-Port.html  Hedgehog-Extras-Stock-IO-Network-Socket.html  Hedgehog-Extras-Stock-IO-Network-Sprocket.html  Hedgehog-Extras-Stock-IO-Process.html  Hedgehog-Extras-Stock-Monad.html  Hedgehog-Extras-Stock-OS.html  Hedgehog-Extras-Stock-String.html  Hedgehog-Extras-Stock-Time.html  Hedgehog-Extras-Stock.html  Hedgehog-Extras-Test-Base.html  Hedgehog-Extras-Test-Concurrent.html  Hedgehog-Extras-Test-File.html  Hedgehog-Extras-Test-Golden.html  Hedgehog-Extras-Test-MonadAssertion.html  Hedgehog-Extras-Test-Network.html  Hedgehog-Extras-Test-Prim.html  Hedgehog-Extras-Test-Process.html  Hedgehog-Extras-Test-TestWatchdog.html  Hedgehog-Extras-Test-Tripwire.html  Hedgehog-Extras-Test-Unit.html  Hedgehog-Extras-Test.html  Hedgehog-Extras.html  README.md  doc-index-36.html  doc-index-A.html  doc-index-All.html  doc-index-B.html  doc-index-C.html  doc-index-D.html  doc-index-E.html  (+22 more)
plutus-example/: .gitignore  README.md  cabal.project  plutus-example.cabal
test-cputicks-darwin/: CHANGELOG.md  test-cputicks-darwin.cabal
timeseries-io/: CHANGELOG.md  dataset.txt  doc.txt  elab.txt  expression.txt  sre-expressions.txt  timeseries-io.cabal  todo.txt  typing.txt  wanted-expressions.txt
trace-dispatcher/: .gitignore  CHANGELOG.md  NOTICE  README.md  trace-dispatcher.cabal
(+17705 files in other folders)
