name:           cardano-node
version:        3.0.1.87
description:    The cardano full node
author:         IOHK
maintainer:     operations@iohk.io
license:        Apache-2.0
license-files:
  LICENSE
  NOTICE
copyright:      2019 Input Output (Hong Kong) Ltd.
build-type:     Simple
cabal-version:  >= 1.10
extra-source-files: README.md, ChangeLog.md

library
  hs-source-dirs:      cardano-node

  exposed-modules:     Cardano.Node.CanonicalJSON
                       Cardano.Node.CLI
                       Cardano.Node.ConfigCLI
                       -- Configuration
                       Cardano.Node.Configuration.CLI
                       Cardano.Node.Configuration.Lib
                       Cardano.Node.Configuration.PartialTypes
                       Cardano.Node.Configuration.Types
                       Cardano.Node.Configuration.Presets
                       Cardano.Node.GitRev
                       Cardano.Node.GitRevFromGit
                       Cardano.Node.Run
                       Cardano.Node.Topology
                       Cardano.Node.TraceAcceptor
                       Cardano.Node.Tracers
                       Cardano.Node.TxSubmission


  other-modules:       Paths_cardano_node

  build-depends:       aeson
                     , async
                     , base >=4.12 && <5
                     , brick
                     , bytestring
                     , canonical-json
                     , cborg
                     , containers
                     , contra-tracer
                     , cryptonite
                     , directory
                     , file-embed
                     , formatting
                     , iproute
                     , iohk-monitoring
                     , io-sim-classes
                     , mtl
                     , network
                     , optparse-applicative
                     , process
                     , safe-exceptions
                     , serialise
                     , template-haskell
                     , text
                     , time
                     , typed-protocols
                     , typed-protocols-cbor
                     , vty

                     , generic-monoid

                     , cardano-binary
                     , cardano-crypto-class
                     , cardano-crypto-wrapper
                     , cardano-ledger
                     , cardano-ledger-test
                     , cardano-prelude
                     , cardano-shell
                     , ouroboros-consensus
                     , ouroboros-network

  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
                       OverloadedStrings

  ghc-options:         -Weverything
                       -Wno-implicit-prelude
                       -fno-warn-safe
                       -fno-warn-unsafe
                       -fno-warn-missing-import-lists
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wredundant-constraints
                       -Wpartial-fields
                       -Wcompat

  if os(windows)
     build-depends:    Win32
  else
     build-depends:    unix
     exposed-modules:  Cardano.Node.LiveView

executable cardano-node
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -threaded
                       -Wall
                       -O2
                       "-with-rtsopts=-T"
                       -fno-warn-unticked-promoted-constructors

  build-depends:       base
                     , cardano-node
                     , cardano-prelude
                     , cardano-shell
                     , optparse-applicative
  if os(windows)
     build-depends:    Win32
  else
     build-depends:    unix
                     , brick
                     , vty


executable wallet-client
  hs-source-dirs:      wallet-client
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -threaded
                       -Wall
                       -O2
                       "-with-rtsopts=-T"
                       -fno-warn-unticked-promoted-constructors
  other-modules:       CLI
                       Paths_cardano_node
                       Run
                       WalletClient
  build-depends:       base
                     , cardano-ledger
                     , cardano-ledger-test
                     , cardano-node
                     , cardano-prelude
                     , cardano-shell
                     , contra-tracer
                     , io-sim-classes
                     , iohk-monitoring
                     , ouroboros-network
                     , ouroboros-consensus
                     , typed-protocols
                     , typed-protocols-cbor

                     , bytestring
                     , network
                     , optparse-applicative
                     , serialise
                     , text
  if os(windows)
     build-depends:    Win32
  else
     build-depends:    unix

executable genesis-tool
  hs-source-dirs:      app/genesis-tool
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -threaded
                       -Wall
                       -O2
                       "-with-rtsopts=-T"
                       -fno-warn-unticked-promoted-constructors
  other-modules:       CLI
                     , Run
                     , Byron.Legacy
  build-depends:       base
                     , cardano-crypto
                     , cardano-crypto-wrapper
                     , cardano-ledger
                     , cardano-ledger-test
                     , cardano-node
                     , cardano-prelude
                     , filepath
                     , iohk-monitoring
                     , pvss

                     , binary
                     , bytestring
                     , cborg
                     , containers
                     , cryptonite
                     , directory
                     , formatting
                     , lens
                     , mtl
                     , network
                     , optparse-applicative
                     , serialise
                     , stm
                     , string-conv
                     , text
                     , time
                     , typed-protocols
  if os(windows)
     build-depends:    Win32
  else
     build-depends:    unix

executable chairman
  hs-source-dirs:      chairman
  main-is:             Main.hs
  other-modules:       Chairman
  default-language:    Haskell2010
  ghc-options:         -threaded
                       -Wall
                       -O2
                       "-with-rtsopts=-T"
                       -fno-warn-unticked-promoted-constructors
  build-depends:       base
                     , contra-tracer
                     , cardano-node
                     , cardano-shell
                     , io-sim-classes
                     , network-mux
                     , ouroboros-consensus
                     , ouroboros-network
                     , typed-protocols
                     , typed-protocols-cbor

                     , async
                     , bytestring
                     , containers
                     , network
                     , optparse-applicative
                     , serialise
                     , text
  if os(windows)
     build-depends:    Win32
  else
     build-depends:    unix

test-suite cardano-node-test
  hs-source-dirs:       test
  main-is:              Spec.hs
  type:                 exitcode-stdio-1.0

  other-modules:
                        Paths_cardano_node

  build-depends:
                        base >=4.12 && <5
                      , cardano-node
                      , cardano-prelude

  default-language:     Haskell2010
  default-extensions:   NoImplicitPrelude

  ghc-options:          -Weverything
                        -fno-warn-missing-import-lists
                        -fno-warn-safe
                        -fno-warn-unsafe
                        -threaded -rtsopts -with-rtsopts=-N -with-rtsopts=-T
