name:           cardano-node
version:        3.0.1.87
description:    The cardano full node
author:         IOHK
maintainer:     operations@iohk.io
license:        Apache-2.0
license-files:
  LICENSE
  NOTICE
copyright:      2019 Input Output (Hong Kong) Ltd.
build-type:     Simple
cabal-version:  >= 1.10
extra-source-files: README.md, ChangeLog.md

library
  hs-source-dirs:      cardano-node

  exposed-modules:     Cardano.CLI.CLI
                       Cardano.CLI.Run
                       Cardano.Legacy.Byron
                       Cardano.Node.CanonicalJSON
                       Cardano.Node.CLI
                       -- Configuration
                       Cardano.Node.Configuration.CLI
                       Cardano.Node.Configuration.Lib
                       Cardano.Node.Configuration.PartialTypes
                       Cardano.Node.Configuration.Types
                       Cardano.Node.Configuration.Presets

  other-modules:       Paths_cardano_node

  build-depends:
                       base >=4.12 && <5
                     , async
                     , binary
                     , bytestring
                     , canonical-json
                     , cborg == 0.2.2.0
                     , containers
                     , cryptonite
                     , directory
                     , filepath
                     , formatting
                     , lens
                     , memory
                     , mtl
                     , network
                     , optparse-applicative
                     , safe-exceptions
                     , serialise
                     , text
                     , time
                     , utf8-string

                     , generic-monoid

                     , cardano-binary
                     , cardano-crypto
                     , cardano-crypto-wrapper
                     , cardano-ledger
                     , cardano-ledger-test
                     , cardano-prelude
                     , cardano-shell
                     , cborg
                     , contra-tracer
                     , io-sim-classes
                     , iohk-monitoring
                     , ouroboros-consensus
                     , ouroboros-network
                     , pvss

  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
                       OverloadedStrings

  ghc-options:         -Weverything
                       -Wno-implicit-prelude
                       -fno-warn-safe
                       -fno-warn-unsafe
                       -fno-warn-missing-import-lists
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wredundant-constraints
                       -Wpartial-fields
                       -Wcompat

  if os(windows)
     build-depends:    Win32
  else
     build-depends:    unix

executable cardano-node
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -threaded
                       -Wall
                       -O2
                       "-with-rtsopts=-T"
                       -fno-warn-unticked-promoted-constructors
  other-modules:       CLI
                       GitRev
                       GitRevFromGit
                       Paths_cardano_node
                       TraceAcceptor
                       Tracers
                       TxSubmission
                       Run
                       Topology
                       Paths_cardano_node
  build-depends:       base
                     , cardano-crypto-class
                     , cardano-crypto-wrapper
                     , cardano-ledger
                     , cardano-ledger-test
                     , cardano-node
                     , cardano-prelude
                     , cardano-shell
                     , contra-tracer
                     , io-sim-classes
                     , iohk-monitoring
                     , ouroboros-network
                     , ouroboros-consensus
                     , typed-protocols-cbor

                     , aeson
                     , async
                     , bytestring
                     , cborg == 0.2.2.0
                     , containers
                     , cryptonite
                     , directory
                     , file-embed
                     , formatting
                     , iproute
                     , lens
                     , mtl
                     , network
                     , optparse-applicative
                     , process
                     , serialise
                     , safe-exceptions
                     , stm
                     , string-conv
                     , template-haskell
                     , text
                     , time
                     , typed-protocols
  if os(windows)
     build-depends:    Win32
  else
     build-depends:    unix
                     , brick
                     , vty
     other-modules:    LiveView

executable wallet-client
  hs-source-dirs:      wallet-client
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -threaded
                       -Wall
                       -O2
                       "-with-rtsopts=-T"
                       -fno-warn-unticked-promoted-constructors
  other-modules:       CLI
                       Paths_cardano_node
                       Run
                       WalletClient
  build-depends:       base
                     , cardano-ledger
                     , cardano-ledger-test
                     , cardano-node
                     , cardano-prelude
                     , cardano-shell
                     , contra-tracer
                     , io-sim-classes
                     , iohk-monitoring
                     , ouroboros-network
                     , ouroboros-consensus
                     , typed-protocols
                     , typed-protocols-cbor

                     , bytestring
                     , network
                     , optparse-applicative
                     , serialise
                     , text
  if os(windows)
     build-depends:    Win32
  else
     build-depends:    unix

executable cardano-cli
  hs-source-dirs:      cardano-cli
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -threaded
                       -Wall
                       -O2
                       "-with-rtsopts=-T"
  build-depends:       base
                     , cardano-node

executable chairman
  hs-source-dirs:      chairman
  main-is:             Main.hs
  other-modules:       Chairman
  default-language:    Haskell2010
  ghc-options:         -threaded
                       -Wall
                       -O2
                       "-with-rtsopts=-T"
                       -fno-warn-unticked-promoted-constructors
  build-depends:       base
                     , contra-tracer
                     , cardano-node
                     , cardano-shell
                     , io-sim-classes
                     , network-mux
                     , ouroboros-consensus
                     , ouroboros-network
                     , typed-protocols
                     , typed-protocols-cbor

                     , async
                     , bytestring
                     , containers
                     , network
                     , optparse-applicative
                     , serialise
                     , text
  if os(windows)
     build-depends:    Win32
  else
     build-depends:    unix

test-suite cardano-node-test
  hs-source-dirs:       test
  main-is:              Spec.hs
  type:                 exitcode-stdio-1.0

  other-modules:
                        Paths_cardano_node

  build-depends:
                        base >=4.12 && <5
                      , cardano-node
                      , cardano-prelude

  default-language:     Haskell2010
  default-extensions:   NoImplicitPrelude

  ghc-options:          -Weverything
                        -fno-warn-missing-import-lists
                        -fno-warn-safe
                        -fno-warn-unsafe
                        -threaded -rtsopts -with-rtsopts=-N -with-rtsopts=-T
