cabal-version: 3.0

name:                   cardano-api-gen
version:                1.27.0
description:            The cardano api generators
author:                 IOHK
maintainer:             operations@iohk.io
license:                Apache-2.0
license-files:          LICENSE
                        NOTICE
build-type:             Simple

common base                         { build-depends: base                             >= 4.14       && < 4.15     }

common project-config
  default-language:     Haskell2010
  default-extensions:   NoImplicitPrelude
                        OverloadedStrings

  ghc-options:          -Wall
                        -Wcompat
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wpartial-fields
                        -Wredundant-constraints
                        -Wunused-packages

library
  import:               base, project-config

  hs-source-dirs:       src

  exposed-modules:      Gen.Cardano.Api
                        Gen.Cardano.Api.Metadata
                        Gen.Cardano.Api.Typed
                        Gen.Cardano.Crypto.Seed
                        Gen.Hedgehog.Roundtrip.Bech32
                        Gen.Hedgehog.Roundtrip.CBOR
                        Gen.Tasty.Hedgehog.Group

  build-depends:        aeson             >= 1.5.6.0
                      , base16-bytestring
                      , bytestring
                      , cardano-api
                      , cardano-binary
                      , cardano-crypto-class
                      , cardano-crypto-test
                      , cardano-ledger-alonzo
                      , cardano-ledger-byron-test
                      , cardano-ledger-core
                      , cardano-prelude
                      , containers
                      , hedgehog
                      , shelley-spec-ledger
                      , tasty
                      , tasty-hedgehog
                      , text
