cabal-version: 3.0

name:                   cardano-api-test
version:                1.27.0
description:            The cardano api tests
author:                 IOHK
maintainer:             operations@iohk.io
license:                Apache-2.0
license-files:          LICENSE
                        NOTICE
build-type:             Simple

common base                         { build-depends: base                             >= 4.14       && < 4.15     }

common project-config
  default-language:     Haskell2010
  default-extensions:   NoImplicitPrelude
                        OverloadedStrings

  ghc-options:          -Wall
                        -Wcompat
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wpartial-fields
                        -Wredundant-constraints
                        -Wunused-packages

library

test-suite cardano-api-test
  import:               base, project-config
  hs-source-dirs:       test
  main-is:              cardano-api-test.hs
  type:                 exitcode-stdio-1.0

  build-depends:        aeson             >= 1.5.6.0
                      , bytestring
                      , cardano-api
                      , cardano-api-gen
                      , cardano-binary
                      , cardano-crypto
                      , cardano-crypto-class
                      , cardano-crypto-test
                      , cardano-crypto-tests
                      , cardano-ledger-core
                      , cardano-prelude
                      , cardano-slotting
                      , containers
                      , hedgehog
                      , hedgehog-extras
                      , ouroboros-consensus
                      , ouroboros-consensus-shelley
                      , QuickCheck
                      , shelley-spec-ledger
                      , shelley-spec-ledger-test
                      , tasty
                      , tasty-quickcheck
                      , time

  other-modules:        Test.Cardano.Api.Crypto
                        Test.Cardano.Api.Genesis
                        Test.Cardano.Api.Json
                        Test.Cardano.Api.KeysByron
                        Test.Cardano.Api.Ledger
                        Test.Cardano.Api.Metadata
                        Test.Cardano.Api.Typed.Bech32
                        Test.Cardano.Api.Typed.CBOR
                        Test.Cardano.Api.Typed.Envelope
                        Test.Cardano.Api.Typed.JSON
                        Test.Cardano.Api.Typed.Ord
                        Test.Cardano.Api.Typed.Orphans
                        Test.Cardano.Api.Typed.RawBytes
                        Test.Cardano.Api.Typed.Script
                        Test.Cardano.Api.Typed.Value

  ghc-options:          -threaded -rtsopts -with-rtsopts=-N -with-rtsopts=-T
